# bio-research-harness

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
config/: llm.toml.example
scenarios/: conn2res.toml  conn2res_checklist.json  crc_survival.toml  crc_survival_checklist.json  gmwi2.toml  gmwi2_checklist.json  insilico_immunotherapy.toml  insilico_immunotherapy_checklist.json  kaggle_pancancer.toml  lyme_diagnostics.toml  lyme_diagnostics_checklist.json  lyme_diagnostics_v2.toml  mock_tcell.toml  phagecounting.toml  phagecounting_80t.toml  phagecounting_checklist.json  phagecounting_full.toml  phagecounting_v2.toml  qshgm.toml  qshgm_checklist.json  turing_patterns.toml
scripts/: auto_label.py  evaluate_run.py  extract_metrics.py  generate_checklist.py  prepare_scenario.py  run_after_batch.sh  run_batch.py  run_batch.sh  run_overnight.sh  run_resume.sh  run_scenario_live.py  run_validation.py  summarize_runs.py
skills/: INDEX.md  LICENSES.md  registry.json
skills/data-quality-control/: SKILL.md
skills/database-api-reference/: SKILL.md
skills/gsea-enrichment/: SKILL.md
skills/web-browse/: SKILL.md
src/research_agent/: __init__.py  compaction.py  context.py  (+12 more)
tests/: conftest.py  test_compaction.py  test_context.py  test_harness.py  test_harness_resume.py  test_integration.py  test_llm_client.py  test_loop.py  test_project_context.py  test_r_integration.py  test_runtime_env.py  test_scenario.py  test_session_log.py  test_simulated_user.py  test_smoke_api.py  test_tool_registry.py  test_tools.py  test_user_agent.py  test_viewer.py  test_workspace.py
(+28 files in other folders)
