[project]
name = "research-agent"
version = "0.1.0"
description = "Multi-agent collaborative system for real scientific research tasks"
requires-python = ">=3.10"
dependencies = [
    "litellm>=1.40,<1.80",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pyright>=1.1",
    "ruff>=0.4",
]
viewer = [
    "streamlit>=1.30",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/research_agent"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "TCH"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "standard"
include = ["src"]
